<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/course"
            android:id="@+id/textViewCourse"
            android:layout_gravity="right"
            android:textStyle="bold" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="  "/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:id="@+id/textViewDate"
            android:layout_gravity="right" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#e6e6e6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Started at "
            android:id="@+id/textView5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_time"
            android:id="@+id/playTime"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="  "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Played for "
            android:id="@+id/textView254" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="duration"
            android:id="@+id/playDuration"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#e6e6e6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tempreture"
            android:id="@+id/temp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" \u2103"
            android:id="@+id/textView255" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="  "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="weather"
            android:id="@+id/weather" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/textViewName"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="  "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Score"
            android:id="@+id/textViewSum"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/textViewName2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="  "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Score"
            android:id="@+id/textViewSum2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/textViewName3"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="  "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Score"
            android:id="@+id/textViewSum3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/textViewName4"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="  "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Score"
            android:id="@+id/textViewSum4"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/invisibleId"
        android:visibility="invisible"/>

</LinearLayout>